fix colors and descripton

--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
         <div class="comment">Самара</div>
         <div class="bottom_addr">г. Самара, ул. Новоурицкая, 22</div>
         <div class="bottom_worktime">Пн-сб с 9:00 до 21:00, вс. 9:00 до 19:00</div>
-        <a class="bottom_phone" href="tel:+7846977777 9">8 (846) 9 77777 9</a>
+        <a class="bottom_phone" href="tel:+78469777779">8 (846) 9 77777 9</a>
         <a class="popup btn arrow" href="#form_popup"
            data-title="Заказать звонок"
            data-comment=""
@@ -776,52 +776,16 @@
 <footer>
     <div class="container">
         <center><a class="disclamer_switch" href="#">Подробные условия акции</a></center>
-        <div class="disclamer">
-            <p>1. Выгода предоставляется при покупке автомобиля Suzuki Vitara в комплектации GL, при одновременном
-                действии программ «Сузуки Финанс» и Трейд-ин. По программе «Сузуки Финанс» скидка 40 000 руб.
-                предоставляется благодаря снижению дилером стоимости автомобиля, приобретаемого за счёт кредита,
-                предоставляемого банком ВТБ (ПАО) — генеральная лицензия Банка России №1000. Основные условия
-                кредитования ВТБ (ПАО) в рамках программы «Сузуки Финанс» («Автокредитование-стандарт»): валюта кредита
-                — рубли РФ, сумма кредита от 150 тыс. до 5 млн. руб. Процентная ставка составляет: при первоначальном
-                взносе от 20% и сроке 12 до 84 месяцев — 16,1% годовых. Банк принимает решение о заключении
-                соответствующего кредитного договора на основании всей предоставленной информации и в соответствии с
-                внутренними требованиями, предъявляемыми к заёмщику. Информация выше действительна на 01.08.2020 г., ВТБ
-                (ПАО) не занимается реализацией автомобилей на коммерческой основе. Подробности программы
-                на www.suzuki-motor.ru/buy/sf/vtb. По программе Трейд-ин скидка в размере 160 000 руб. предоставляется
-                при условии обмена автомобиля марки Suzuki с пробегом на новый автомобиль Suzuki Vitara (140 000 руб. —
-                при условии обмена автомобиля с пробегом любых других марок) по схеме Трейд-ин у официального
-                дилера Suzuki при условии согласия дилера принять автомобиль с пробегом в зачет нового. Предложение
-                распространяется на новые автомобили Suzuki Vitara, носит информационный характер, не является публичной
-                офертой и действует с 01.08.2020 г. по 31.08.2020 г. включительно и ограничено наличием автомобилей у
-                дилеров. Внешний вид автомобилей может отличаться от представленного в рекламе. Подробности и список
-                официальных дилеров Suzuki, предоставляющих Предложение, уточняйте на www.suzuki-motor.ru <br><br>
-
-                2. Выгода предоставляется при покупке автомобиля Suzuki SX4 в комплектации GL с автоматической
-                трансмиссией и полным приводом при одновременном действии программ «Сузуки Финанс» и Трейд-ин. По
-                программе «Сузуки Финанс» скидка 40 000 руб. предоставляется благодаря снижению дилером стоимости
-                автомобиля, приобретаемого за счёт кредита, предоставляемого банком ВТБ (ПАО) — генеральная лицензия
-                Банка России №1000. Основные условия кредитования ВТБ (ПАО) в рамках программы «Сузуки Финанс»
-                («Автокредитование-стандарт»): валюта кредита — рубли РФ, сумма кредита от 150 тыс. до 5 млн. руб.
-                Процентная ставка составляет: при первоначальном взносе от 20% и сроке 12 до 84 месяцев — 16,1% годовых.
-                Банк принимает решение о заключении соответствующего кредитного договора на основании всей
-                предоставленной информации и в соответствии с внутренними требованиями, предъявляемыми к заёмщику.
-                Информация выше действительна на 01.08.2020 г., ВТБ (ПАО) не занимается реализацией автомобилей на
-                коммерческой основе. Подробности программы на www.suzuki-motor.ru/buy/sf/vtb. По программе Трейд-ин
-                скидка размере 220 000 руб. предоставляется при условии обмена автомобиля марки Suzuki с пробегом на
-                новый автомобиль Suzuki SX4 (200 000 руб. — при условии обмена автомобиля с пробегом любых других марок)
-                по схеме Трейд-ин у официального дилера Suzuki при условии согласия дилера принять автомобиль с пробегом
-                в зачет нового. Предложение распространяется на новые автомобили Suzuki SX4, носит информационный
-                характер, не является публичной офертой и действует с 01.08.2020 г. по 31.08.2020 г. включительно и
-                ограничено наличием автомобилей у дилеров. Внешний вид автомобилей может отличаться от представленного в
-                рекламе. Подробности и список официальных дилеров Suzuki, предоставляющих Предложение, уточняйте на
-                www.suzuki-motor.ru <br><br>
-
-                3. Акция действует с 1 по 31 августа 2020 года при покупке автомобиля SUZUKI любой модели и
-                комплектации. Выгода указана на комплект «защита»: механический блокиратор КПП, защита картера двигателя
-                2wd (стальная), 4WD, Защитная сетка радиатора, брызговики 4 шт. гибкие, камера заднего вида, подкрылки
-                задние, защита колесных арок и дна 4 шт, антигравий. Число подарков ограничено. Подробности в дилерском
-                центре Автомир Suzuki. </p>
-        </div>
+        <div class="disclamer" style="display: block;">
+            <p>Данный сайт носит исключительно информационно-справочный характер и ни при каких условиях не является публичной офертой.</p>
+            <p>Предложение действительно с 01.11.2019 по 31.12.2019г.</p>
+            <p>Выгода предоставляется на автомобили Nissan 2019 года выпуска, складывается из снижения цены на отдельные комплектации при участии клиента в Программе утилизации и трейд-ин от Nissan, а также выгоды для клиентов-участников программы «В кругу Nissan» (при сдаче предыдущего автомобиля Nissan по схеме «трейд-ин»). Подробнее по телефонам и в дилерских центрах Ниссан Эксперт Самара.</p>
+            <p>** Маркетинговая ставка не является процентной ставкой по кредиту и отражает размер расходов по уплате процентов на сумму кредита, предоставляемого АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.) для приобретения автомобиля Nissan, достигаемый соразмерным снижением стоимости приобретаемого автомобиля. Предложение не является офертой, действительно для клиентов – участников программы «В кругу Nissan» (подробности программы – на www.nissan.ru/RU/ru/vkrugunissan). Условия и тарифы могут быть изменены в одностороннем порядке. Подробности по телефону и в дилерских центрах Ниссан Эксперт Самара.</p>
+            <p>*** Услуги кредитования по программе Nissan Finance осуществляются АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.).</p>
+            <p>0,1% на 2 года. Услуги кредитования по программе Nissan Finance осуществляются АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.). Действительно для приобретения физлицами автомобилей Nissan Murano HEV (ХЕВ) 2018 и 2019 г.в. и рассчитано из следующих условий: аванс от 70% цены автомобиля; сумма кредита: от 100 000 руб; валюта - рубль РФ; срок кредита: 2 года; процентная ставка: 0,1% годовых; возврат кредита - ежемесячные (аннуитетные) платежи; обеспечение возврата кредита – залог приобретаемого автомобиля; оплата страховых премий в кредит: по договору страхования от Н/С и болезней с ООО «СК КАРДИФ» (лицензии ЦБ РФ CИ № 4104 и СЛ № 4104, выданы 18.07.2018) и договору страхования КАСКО по любой программе «Ниссан Страхование» сроком на 1 год. Не является публичной офертой. Услуги кредитования по программе Nissan Finance осуществляются АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.). Действительно для приобретения физлицами автомобилей Nissan X-Trail в комплектациях 2.5 LE+, LE Top (Эл Е+, Эл Е Топ) 2018 и 2019 г.в. и рассчитано из следующих условий: аванс от 70% цены автомобиля; сумма кредита: от 100 000 руб; валюта - рубль РФ; срок кредита: 2 года; процентная ставка: 0,1% годовых; возврат кредита – ежемесячные (аннуитетные) платежи; обеспечение возврата кредита – залог приобретаемого автомобиля; оплата страховых премий в кредит: по договору страхования от Н/С и болезней с ООО «СК КАРДИФ» (лицензии ЦБ РФ CИ № 4104 и СЛ № 4104, выданы 18.07.2018) и договору страхования КАСКО по любой программе «Ниссан Страхование» сроком на 1 год. Не является публичной офертой.</p>
+            <p>3% на 3 года. Услуги кредитования по программе Nissan Finance осуществляются АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.). Действительно для приобретения физлицами автомобиля Nissan Qashqai 2018 и 2019 г.в. и рассчитано из следующих условий: аванс от 70% цены автомобиля; сумма кредита: от 100 000 руб; валюта - рубль РФ; срок кредита: 3 года; процентная ставка: 3% годовых; возврат кредита - ежемесячные (аннуитетные) платежи; обеспечение возврата кредита – залог приобретаемого автомобиля; оплата страховых премий в кредит: по договору страхования от Н/С и болезней с ООО «СК КАРДИФ» (лицензии ЦБ РФ CИ № 4104 и СЛ № 4104, выданы 18.07.2018) и договору страхования КАСКО по любой программе «Ниссан Страхование» сроком на 1 год. Действительно для клиентов – участников программы «В кругу Nissan». Не является публичной офертой. Услуги кредитования по программе Nissan Finance осуществляются АО «РН Банк» (лицензия Банка России № 170 от 16.12.2014 г.). Действительно для приобретения физлицами автомобиля Nissan Terrano 2018 и 2019 г.в. и рассчитано из следующих условий: аванс от 70% цены автомобиля; сумма кредита: от 100 000 руб; валюта - рубль РФ; срок кредита: 3 года; процентная ставка: 3% годовых; возврат кредита - ежемесячные (аннуитетные) платежи; обеспечение возврата кредита – залог приобретаемого автомобиля; оплата страховых премий в кредит: по договору страхования от Н/С и болезней с ООО «СК КАРДИФ» (лицензии ЦБ РФ CИ № 4104 и СЛ № 4104, выданы 18.07.2018) и договору страхования КАСКО по любой программе «Ниссан Страхование» сроком на 1 год. Действительно для клиентов – участников программы «В кругу Nissan» Не является публичной офертой.</p>
+            <p>**** Программа «Простые правила» Nissan Finance. Вносите минимальный первоначальный взнос в размере 20% и уезжаете на вашем новом автомобиле Ниссан. В течение 36 месяцев вы погашаете сниженные ежемесячные платежи. После этого вы вносите фиксированный остаточный платеж в размере 40% или выбираете другой вариант: обмен по трейд-ин, продажу автомобиля в счет погашения кредита или пролонгацию кредита еще на 2 года. При равных процентных ставках и сроках преимущество программы «Простые правила» перед классическим кредитом в том, что ежемесячные платежи в среднем в 2 раза ниже, а свобода действий клиента – выше, чем при стандартных кредитных предложениях. В программе участвуют модели NISSAN TERRANO, JUKE, QASHQAI, X-TRAIL, MURANO. Подробнее по телефонам и в дилерских центрах Ниссан Эксперт Самара.</p>
+    </div>
     </div>
 </footer>
 <div id="form_popup">
