--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 <div class="container">
     <div class="title1_container" id="top">
         <div class="title1">
-          <b><i>КУРС РАСТЕТ, А ЦЕНЫ НА NISSAN В ЭКСПЕРТ&nbsp;САМАРА — НЕТ!</i></b><br>
-          <span>ВЫГОДА ПО ТРЕЙД&nbsp;ИН ДО <b>170 000</b>&nbsp;рублей!</span>
+          <b><i>КУРС РАСТЕТ, <br>А ЦЕНЫ НА NISSAN В ЭКСПЕРТ&nbsp;САМАРА — НЕТ!</i></b><br>
+          <span>Выгода по Трейд&nbsp;Ин <br>до <b>170 000</b>&nbsp;рублей!</span>
         </div>
 
         <a class="popup btn arrow red" href="#form_popup"
@@ -87,14 +87,6 @@
            data-form_diler="">
             <span>Узнать подробности</span>
         </a>
-
-        <!--div class="title2">
-            <div class="title2_text">
-                <div class="strong">Компенсируем расходы</div>
-                <div class="red">Билеты и проживание</div>
-                <div class="normal">Для иногородних клиентов</div>
-            </div>
-        </div-->
 
         <div class="advantages_container">
             <ul class="advantages">
@@ -128,16 +120,7 @@
                         <span><b><strong>5&nbsp;лет</strong></b> гарантии <b><strong>в&nbsp;подарок</strong></b></span>
                     </a>
                 </li>
-                <!--<li>
-                    <a class="popup ico3" href="#form_popup"
-                       data-title="до 80 000 руб. подарки от Автомира"
-                       data-comment=""
-                       data-form_name="callback"
-                       data-form_type_model_name=""
-                       data-form_diler="">
-                        <span><b><strong>до 80 000 руб.</strong></b><br>подарки<br> от Автомира</span>
-                    </a>
-                </li>-->
+
                 <li>
                     <a class="popup ico4" href="#form_popup"
                        data-title="Оплатим дорогу до&nbsp;ДЦ "
@@ -215,7 +198,7 @@
                         <i></i><span>Получить рассрочку</span>
                     </a>
 
-                    <div class="colors_title">Доступные цвета</div>
+                    <!-- <div class="colors_title">Доступные цвета</div>
 
                     <ul class="colors_items">
                         <li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
@@ -241,7 +224,7 @@
                                         style="border-bottom-color:#d0e2e5"></span></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
 
 
@@ -261,7 +244,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по трейд ин <span>60&nbsp;000 руб.</span>
+                            Выгода по Трейд Ин <span>60&nbsp;000 руб.</span>
                         </a>
                         <a class="popup cred" href="#form_popup"
                            data-title="0 руб. Первый взнос"
@@ -269,7 +252,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по программе «В кругу Nissan» <span>20&nbsp;000 руб.</span>
+                            Выгода по программе «В кругу&nbsp;Nissan» <span>20&nbsp;000 руб.</span>
                         </a>
                     </div>
                     <div class="btns">
@@ -322,7 +305,7 @@
                         <i></i><span>Получить рассрочку</span>
                     </a>
 
-                    <div class="colors_title">Доступные цвета</div>
+                    <!-- <div class="colors_title">Доступные цвета</div>
 
                     <ul class="colors_items">
                         <li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
@@ -348,7 +331,7 @@
                                         style="border-bottom-color:#d0e2e5"></span></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
 
 
@@ -368,7 +351,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по трейд ин <span>100&nbsp;000 руб.</span>
+                            Выгода по Трейд Ин <span>100&nbsp;000 руб.</span>
                         </a>
                         <a class="popup cred" href="#form_popup"
                            data-title="0 руб. Первый взнос"
@@ -376,7 +359,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по программе «В кругу Nissan» <span>30&nbsp;000 руб.</span>
+                            Выгода по программе «В кругу&nbsp;Nissan» <span>30&nbsp;000 руб.</span>
                         </a>
                     </div>
                     <div class="btns">
@@ -407,8 +390,8 @@
                         <span>Nissan XTRAIL</span>
                         <b><font>Спеццена до 27 октября</font></b><br>
                         от 1&nbsp;549&nbsp;000&nbsp;руб.<br>
-                         подарок 30 000 руб.<br>
-                         от ЭКСПЕРТ САМАРА</b>
+                         <!-- подарок 30 000 руб.<br>
+                         от ЭКСПЕРТ САМАРА</b> -->
                     </div>
 
                     <a class="popup image" href="#form_popup"
@@ -429,7 +412,7 @@
                         <i></i><span>Получить рассрочку</span>
                     </a>
 
-                    <div class="colors_title">Доступные цвета</div>
+                    <!-- <div class="colors_title">Доступные цвета</div>
 
                     <ul class="colors_items">
                         <li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
@@ -455,7 +438,7 @@
                                         style="border-bottom-color:#d0e2e5"></span></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
 
 
@@ -475,7 +458,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по трейд ин <span>170&nbsp;000 руб.</span>
+                            Выгода по Трейд Ин <span>170&nbsp;000 руб.</span>
                         </a>
                         <a class="popup cred" href="#form_popup"
                            data-title="0 руб. Первый взнос"
@@ -483,7 +466,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по программе «В кругу Nissan» <span>30&nbsp;000 руб.</span>
+                            Выгода по программе «В кругу&nbsp;Nissan» <span>30&nbsp;000 руб.</span>
                         </a>
                     </div>
                     <div class="btns">
@@ -536,7 +519,7 @@
                         <i></i><span>Получить рассрочку</span>
                     </a>
 
-                    <div class="colors_title">Доступные цвета</div>
+                    <!-- <div class="colors_title">Доступные цвета</div>
 
                     <ul class="colors_items">
                         <li><a href="#" title="color" alt="color" style="background:#be0d1b"></a></li>
@@ -562,7 +545,7 @@
                                         style="border-bottom-color:#d0e2e5"></span></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#e9e9e9"></a></li>
                         <li><a href="#" title="color" alt="color" style="background:#21677a"></a></li>
-                    </ul>
+                    </ul> -->
                 </div>
 
 
@@ -582,7 +565,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по трейд ин <span>150&nbsp;000 руб.</span>
+                            Выгода по Трейд Ин <span>150&nbsp;000 руб.</span>
                         </a>
                         <a class="popup cred" href="#form_popup"
                            data-title="0 руб. Первый взнос"
@@ -590,7 +573,7 @@
                            data-form_name="callback"
                            data-form_type_model_name=""
                            data-form_diler="">
-                            Выгода по программе «В кругу Nissan» <span>100&nbsp;000 руб.</span>
+                            Выгода по программе «В кругу&nbsp;Nissan» <span>100&nbsp;000 руб.</span>
                         </a>
                     </div>
                     <div class="btns">
@@ -639,8 +622,14 @@
     </div>
 </div>
 
-
-
+<div class="timer">
+    <div class="container timer_container">
+        <div class="title1">Срок действия акции до:</div>
+        <div class="mtimer">
+            <script src="//megatimer.ru/get/f5d55947236aa3a8b89ea523cdeb9bda.js"></script>
+        </div>
+    </div>
+</div>
 
 <div class="test-drive">
     <div class="container">
