тест анимации (aos)

--- a/index.html
+++ b/index.html
@@ -74,7 +74,12 @@
 
 <div class="container">
     <div class="title1_container" id="top">
-        <div class="title1">
+        <div class="title1"
+        data-aos="fade-down"
+        data-aos-offset="0"
+        data-aos-delay="50"
+        data-aos-duration="500"
+        data-aos-easing="ease-in-out">
           <b><i>КУРС РАСТЕТ, <br>А ЦЕНЫ НА NISSAN В ЭКСПЕРТ&nbsp;САМАРА — НЕТ!</i></b><br>
           <span>Выгода по Трейд&nbsp;Ин <br>до <b>170 000</b>&nbsp;рублей!</span>
         </div>
@@ -84,7 +89,12 @@
            data-comment=""
            data-form_name="callback"
            data-form_type_model_name=""
-           data-form_diler="">
+           data-form_diler=""
+           data-aos="fade-up" 
+           data-aos-offset="0"
+           data-aos-delay="1000"
+           data-aos-duration="500"
+           data-aos-easing="ease-in-out">
             <span>Узнать подробности</span>
         </a>
 
