еще тест анимации

--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
         data-aos="fade-down"
         data-aos-offset="0"
         data-aos-delay="0"
-        data-aos-duration="300"
-        data-aos-easing="ease-in-out">
+        data-aos-duration="300">
           <b><i>КУРС РАСТЕТ, <br>А ЦЕНЫ НА NISSAN В ЭКСПЕРТ&nbsp;САМАРА — НЕТ!</i></b><br>
           <span>Выгода по Трейд&nbsp;Ин <br>до <b>170 000</b>&nbsp;рублей!</span>
         </div>
@@ -93,8 +92,7 @@
            data-aos="fade-up" 
            data-aos-offset="0"
            data-aos-delay="800"
-           data-aos-duration="300"
-           data-aos-easing="ease-in-out">
+           data-aos-duration="300">
             <span>Узнать подробности</span>
         </a>
 
