--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 				<div class="title1_container" id="top">
 					<div class="top-banner__title">
 						<div class="title1">
-							<b><i>КУРС РАСТЕТ, <br>А ЦЕНЫ НА NISSAN В ЭКСПЕРТ&nbsp;САМАРА — НЕТ!</i></b><br>
-							<span>Выгода по Трейд&nbsp;Ин <br>до <b>170 000</b>&nbsp;рублей!</span>
+							<b><i>Курс растет, а цены на Nissan в Эксперт&nbsp;Самара — нет!</i></b><br>
+							<span>Выгода по Трейд&nbsp;Ин до&nbsp;<b>170&nbsp;000</b>&nbsp;рублей!</span>
 						</div>
 
 						<a class="popup btn arrow red" href="#form_popup" data-title="Узнать подробности" data-comment="" data-form_name="callback" data-form_type_model_name="" data-form_diler=""><span>Узнать подробности</span></a>
@@ -63,12 +63,12 @@
 						<ul class="advantages">
 							<li>
 								<a class="popup ico0" href="#form_popup" data-title="Комплект зимней резины в&nbsp;подарок!"	data-comment="" data-form_name="callback"	data-form_type_model_name="" data-form_diler="">
-									<span>Комплект зимней резины <b><strong>в&nbsp;подарок!</strong></b></span>
+									<span>Льготная <br>кредитная <br><strong>ставка 0,1%</strong></span>
 								</a>
 							</li>
 							<li>
 								<a class="popup ico1" href="#form_popup"	data-title="Бонус до 450&nbsp;000&nbsp;₽"	data-comment="" data-form_name="callback"	data-form_type_model_name=""	data-form_diler="">
-									<span>Бонус до <b><strong>450&nbsp;000&nbsp;₽</strong></b></span>
+									<span>Скидка&nbsp;<strong>30&nbsp;000₽</strong><br> за лояльный <br>Трейд&nbsp;Ин</span>
 								</a>
 							</li>
 							<li>
@@ -77,7 +77,7 @@
 								data-form_name="callback"
 								data-form_type_model_name=""
 								data-form_diler="">
-									<span><b><strong>5&nbsp;лет</strong></b> гарантии <b><strong>в&nbsp;подарок</strong></b></span>
+									<span>Выгода по<br> Трейд&nbsp;Ин<br> <strong>170&nbsp;000₽</strong></span>
 								</a>
 							</li>
 							<li>
@@ -87,7 +87,7 @@
 								data-form_name="callback"
 								data-form_type_model_name=""
 								data-form_diler="">
-									<span>Оплатим <b><strong>дорогу</strong></b> до&nbsp;ДЦ</span>
+									<span>Скидка <br><strong>20&nbsp;000₽</strong> на доп.&nbsp;оборудование</span>
 								</a>
 							</li>
 						</ul>
